--- a/index.html
+++ b/index.html
@@ -4,27 +4,49 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Студія</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a href="./index.html" class="header-logo"><span>Web</span>Studio</a>
-        <ul class="header-menu">
-          <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
-          <li class="header-menu-item"><a class="header-menu-link" href="./portfolio.html">Portfolio</a></li>
-          <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
+        <a href="./index.html" class="header-logo link"
+          >Web<span class="header-logo-part">Studio</span></a
+        >
+        <ul class="header-menu list">
+          <li class="header-menu-item">
+            <a class="header-menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link link" href="./portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address class="header-address">
-        <ul class="header-contacts">
-          <li class="header-contacts-item"><a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="header-contacts-item"><a class="header-contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="header-contacts list">
+          <li class="header-contacts-item">
+            <a
+              class="header-contacts-link link"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-contacts-item">
+            <a class="header-contacts-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -36,7 +58,7 @@
       </section>
       <section class="benefits">
         <h2 hidden>benefits</h2>
-        <ul class="benefits-list">
+        <ul class="benefits-list list">
           <li class="benefits-list-item">
             <h3 class="benefits-list-subtitle">Strategy</h3>
             <p class="benefits-list-text">
@@ -69,7 +91,7 @@
       </section>
       <section class="task">
         <h2 class="task-title">What are we doing</h2>
-        <ul class="task-list">
+        <ul class="task-list list">
           <li class="task-item-list">
             <img
               src="./images/box-1.jpg"
@@ -77,8 +99,8 @@
               width="360"
               height="300"
             />
-          </li class="task-item-list">
-          <li>
+          </li>
+          <li class="task-item-list">
             <img
               src="./images/box-2.jpg"
               alt="program in the phone"
@@ -87,41 +109,70 @@
             />
           </li>
           <li class="task-item-list">
-            <img src="./images/box-3.jpg" alt="phone" width="360" height="300" />
+            <img
+              src="./images/box-3.jpg"
+              alt="phone"
+              width="360"
+              height="300"
+            />
           </li>
         </ul>
       </section>
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-            <li class="team-list-item">
-                <img src="./images/worker-1.jpg" alt="Mark Guerrero" width="264" height="260">
-                <h3 class="team-list-subtitle">Mark Guerrero</h3>
-                <p class=team-list-text>Product Designer</p>
-            </li>
-            <li class="team-list-item">
-                <img src="./images/worker-2.jpg" alt="Tom Ford" width="264" height="260">
-                <h3 class="team-list-subtitle">Tom Ford</h3>
-                <p class=team-list-text>Frontend Developer</p>
-            </li>
-            <li class="team-list-item">
-                <img src="./images/worker-3.jpg" alt="Camila Garcia" width="264" height="260">
-                <h3 class="team-list-subtitle">Camila Garcia</h3>
-                <p class=team-list-text>Marketing</p>
-            </li>
-            <li class="team-list-item">
-                <img src="./images/worker-4.jpg" alt="Daniel Wilson" width="264" height="260">
-                <h3 class="team-list-subtitle">Daniel Wilson</h3>
-                <p class=team-list-text>UI Designer</p>
-            </li>
+        <ul class="team-list list">
+          <li class="team-list-item">
+            <img
+              src="./images/worker-1.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-list-subtitle">Mark Guerrero</h3>
+            <p class="team-list-text">Product Designer</p>
+          </li>
+          <li class="team-list-item">
+            <img
+              src="./images/worker-2.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-list-subtitle">Tom Ford</h3>
+            <p class="team-list-text">Frontend Developer</p>
+          </li>
+          <li class="team-list-item">
+            <img
+              src="./images/worker-3.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-list-subtitle">Camila Garcia</h3>
+            <p class="team-list-text">Marketing</p>
+          </li>
+          <li class="team-list-item">
+            <img
+              src="./images/worker-4.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-list-subtitle">Daniel Wilson</h3>
+            <p class="team-list-text">UI Designer</p>
+          </li>
         </ul>
       </section>
     </main>
 
     <footer class="footer">
-        <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <a class="footer-logo link" href="./index.html"
+        >Web<span class="footer-logo-part">Studio</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
-
