--- a/portfolio.html
+++ b/portfolio.html
@@ -17,28 +17,34 @@
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a href="./index.html" class="header-logo"><span>Web</span>Studio</a>
-        <ul class="header-menu">
+        <a href="./index.html" class="header-logo link"
+          >Web<span class="header-logo-part">Studio</span></a
+        >
+        <ul class="header-menu list">
           <li class="header-menu-item">
-            <a class="header-menu-link" href="./index.html">Studio</a>
+            <a class="header-menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
+            <a class="header-menu-link link" href="./portfolio.html"
+              >Portfolio</a
+            >
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Contacts</a>
+            <a class="header-menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="header-address">
-        <ul class="header-contacts">
+        <ul class="header-contacts list">
           <li class="header-contacts-item">
-            <a class="header-contacts-link" href="mailto:info@devstudio.com"
+            <a
+              class="header-contacts-link link"
+              href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contacts-item">
-            <a class="header-contacts-link" href="tel:+110001111111"
+            <a class="header-contacts-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -48,122 +54,124 @@
     <main>
       <section class="projects">
         <h1 hidden>Our works</h1>
-        <ul class="projects-list">
-          <li class="projects-list-item">
-            <button class="projects-list-btn" type="button">All</button>
+        <ul class="projects-menu list">
+          <li class="projects-menu-item">
+            <button class="projects-menu-btn" type="button">All</button>
           </li>
-          <li class="projects-list-item">
-            <button class="projects-list-btn" type="button">Web Site</button>
+          <li class="projects-menu-item">
+            <button class="projects-menu-btn" type="button">Web Site</button>
           </li>
-          <li class="projects-list-item">
-            <button class="projects-list-btn" type="button">App</button>
+          <li class="projects-menu-item">
+            <button class="projects-menu-btn" type="button">App</button>
           </li>
-          <li class="projects-list-item">
-            <button class="projects-list-btn" type="button">Design</button>
+          <li class="projects-menu-item">
+            <button class="projects-menu-btn" type="button">Design</button>
           </li>
-          <li class="projects-list-item">
-            <button class="projects-list-btn" type="button">Marketing</button>
+          <li class="projectsmenut-item">
+            <button class="projects-menu-btn" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="projects-catalog">
-          <li class="projects-catalog-item">
+        <ul class="projects-list list">
+          <li class="projects-list-item">
             <img
               src="./images/project-1.jpg"
               width="360"
               height="300"
               alt="Bank app"
             />
-            <h2 class="projects-catalog-subtitle">
+            <h2 class="projects-list-subtitle">
               Banking App Interface Concept
             </h2>
-            <p class="projects-catalog-text">App</p>
+            <p class="projects-list-text">App</p>
           </li>
-          <li class="projects-catalog-item">
+          <li class="projects-list-item">
             <img
               src="./images/project-2.jpg"
               width="360"
               height="300"
               alt="Cashless payment"
             />
-            <h2 class="projects-catalog-subtitle">Cashless Payment</h2>
-            <p class="projects-catalog-text">Marketing</p>
+            <h2 class="projects-list-subtitle">Cashless Payment</h2>
+            <p class="projects-list-text">Marketing</p>
           </li>
-          <li class="projects-catalog-item">
+          <li class="projects-list-item">
             <img
               src="./images/project-3.jpg"
               width="360"
               height="300"
               alt="Meditation App"
             />
-            <h2 class="projects-catalog-subtitle">Meditation App</h2>
-            <p class="projects-catalog-text">App</p>
+            <h2 class="projects-list-subtitle">Meditation App</h2>
+            <p class="projects-list-text">App</p>
           </li>
-          <li class="projects-catalog-item">
+          <li class="projects-list-item">
             <img
               src="./images/project-4.jpg"
               width="360"
               height="300"
               alt="Taxi Service"
             />
-            <h2 class="projects-catalog-subtitle">Taxi Service</h2>
-            <p class="projects-catalog-text">Marketing</p>
+            <h2 class="projects-list-subtitle">Taxi Service</h2>
+            <p class="projects-list-text">Marketing</p>
           </li>
-          <li class="projects-catalog-item">
+          <li class="projects-list-item">
             <img
               src="./images/project-5.jpg"
               width="360"
               height="300"
               alt="Screen Illustrations"
             />
-            <h2 class="projects-catalog-subtitle">Screen Illustrations</h2>
-            <p class="projects-catalog-text">Design</p>
+            <h2 class="projects-list-subtitle">Screen Illustrations</h2>
+            <p class="projects-list-text">Design</p>
           </li>
-          <li class="projects-catalog-item">
+          <li class="projects-list-item">
             <img
               src="./images/project-6.jpg"
               width="360"
               height="300"
               alt="Girl holding a phone"
             />
-            <h2 class="projects-catalog-subtitle">Online Courses</h2>
-            <p class="projects-catalog-text">Marketing</p>
+            <h2 class="projects-list-subtitle">Online Courses</h2>
+            <p class="projects-list-text">Marketing</p>
           </li>
-          <li class="projects-catalog-item">
+          <li class="projects-list-item">
             <img
               src="./images/project-7.jpg"
               width="360"
               height="300"
               alt="Instagram Stories Concept"
             />
-            <h2 class="projects-catalog-subtitle">Instagram Stories Concept</h2>
-            <p class="projects-catalog-text">Design</p>
+            <h2 class="projects-list-subtitle">Instagram Stories Concept</h2>
+            <p class="projects-list-text">Design</p>
           </li>
-          <li class="projects-catalog-item">
+          <li class="projects-list-item">
             <img
               src="./images/project-8.jpg"
               width="360"
               height="300"
               alt="Organic Food"
             />
-            <h2 class="projects-catalog-subtitle">Organic Food</h2>
+            <h2 class="projects-list-subtitle">Organic Food</h2>
             <p class="projects-catalog-text">Web Site</p>
           </li>
-          <li class="projects-catalog-item">
+          <li class="projects-list-item">
             <img
               src="./images/project-9.jpg"
               width="360"
               height="300"
               alt="Fresh Coffee"
             />
-            <h2 class="projects-catalog-subtitle">Fresh Coffee</h2>
-            <p class="projects-catalog-text">Web Site</p>
+            <h2 class="projects-list-subtitle">Fresh Coffee</h2>
+            <p class="projects-list-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+      <a class="footer-logo link" href="./index.html"
+        >Web<span class="footer-logo-part">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
