--- a/portfolio.html
+++ b/portfolio.html
@@ -73,6 +73,7 @@
         </ul>
         <ul class="projects-list list">
           <li class="projects-list-item">
+            <a href="" class="projects-list-link link">
             <img
               src="./images/project-1.jpg"
               width="360"
@@ -83,8 +84,10 @@
               Banking App Interface Concept
             </h2>
             <p class="projects-list-text">App</p>
+            </a>
           </li>
           <li class="projects-list-item">
+            <a href="" class="projects-list-link link">
             <img
               src="./images/project-2.jpg"
               width="360"
@@ -93,8 +96,10 @@
             />
             <h2 class="projects-list-subtitle">Cashless Payment</h2>
             <p class="projects-list-text">Marketing</p>
+            </a>
           </li>
           <li class="projects-list-item">
+            <a href="" class="projects-list-link link">
             <img
               src="./images/project-3.jpg"
               width="360"
@@ -103,8 +108,10 @@
             />
             <h2 class="projects-list-subtitle">Meditation App</h2>
             <p class="projects-list-text">App</p>
+            </a>
           </li>
           <li class="projects-list-item">
+            <a href="" class="projects-list-link link">
             <img
               src="./images/project-4.jpg"
               width="360"
@@ -113,8 +120,10 @@
             />
             <h2 class="projects-list-subtitle">Taxi Service</h2>
             <p class="projects-list-text">Marketing</p>
+            </a>
           </li>
           <li class="projects-list-item">
+            <a href="" class="projects-list-link link">
             <img
               src="./images/project-5.jpg"
               width="360"
@@ -123,8 +132,10 @@
             />
             <h2 class="projects-list-subtitle">Screen Illustrations</h2>
             <p class="projects-list-text">Design</p>
+            </a>
           </li>
           <li class="projects-list-item">
+            <a href="" class="projects-list-link link">
             <img
               src="./images/project-6.jpg"
               width="360"
@@ -133,8 +144,10 @@
             />
             <h2 class="projects-list-subtitle">Online Courses</h2>
             <p class="projects-list-text">Marketing</p>
+            </a>
           </li>
           <li class="projects-list-item">
+            <a href="" class="projects-list-link link">
             <img
               src="./images/project-7.jpg"
               width="360"
@@ -143,8 +156,10 @@
             />
             <h2 class="projects-list-subtitle">Instagram Stories Concept</h2>
             <p class="projects-list-text">Design</p>
+            </a>
           </li>
           <li class="projects-list-item">
+            <a href="" class="projects-list-link link">
             <img
               src="./images/project-8.jpg"
               width="360"
@@ -153,8 +168,10 @@
             />
             <h2 class="projects-list-subtitle">Organic Food</h2>
             <p class="projects-catalog-text">Web Site</p>
+            </a>
           </li>
           <li class="projects-list-item">
+            <a href="" class="projects-list-link link">
             <img
               src="./images/project-9.jpg"
               width="360"
@@ -163,6 +180,7 @@
             />
             <h2 class="projects-list-subtitle">Fresh Coffee</h2>
             <p class="projects-list-text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
