--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               height="260"
             />
             <h3 class="team-list-subtitle">Mark Guerrero</h3>
-            <p class="team-list-text">Product Designer</p>
+            <p class="team-list-text text">Product Designer</p>
           </li>
           <li class="team-list-item">
             <img
@@ -139,7 +139,7 @@
               height="260"
             />
             <h3 class="team-list-subtitle">Tom Ford</h3>
-            <p class="team-list-text">Frontend Developer</p>
+            <p class="team-list-text text">Frontend Developer</p>
           </li>
           <li class="team-list-item">
             <img
@@ -149,7 +149,7 @@
               height="260"
             />
             <h3 class="team-list-subtitle">Camila Garcia</h3>
-            <p class="team-list-text">Marketing</p>
+            <p class="team-list-text text">Marketing</p>
           </li>
           <li class="team-list-item">
             <img
@@ -159,7 +159,7 @@
               height="260"
             />
             <h3 class="team-list-subtitle">Daniel Wilson</h3>
-            <p class="team-list-text">UI Designer</p>
+            <p class="team-list-text text">UI Designer</p>
           </li>
         </ul>
       </section>
