--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
               <h2 class="projects-list-subtitle">
                 Banking App Interface Concept
               </h2>
-              <p class="projects-list-text text">App</p>
+              <p class="projects-list-text">App</p>
             </a>
           </li>
           <li class="projects-list-item">
@@ -95,7 +95,7 @@
                 alt="Cashless payment"
               />
               <h2 class="projects-list-subtitle">Cashless Payment</h2>
-              <p class="projects-list-text text">Marketing</p>
+              <p class="projects-list-text">Marketing</p>
             </a>
           </li>
           <li class="projects-list-item">
@@ -107,7 +107,7 @@
                 alt="Meditation App"
               />
               <h2 class="projects-list-subtitle">Meditation App</h2>
-              <p class="projects-list-text text">App</p>
+              <p class="projects-list-text">App</p>
             </a>
           </li>
           <li class="projects-list-item">
@@ -119,7 +119,7 @@
                 alt="Taxi Service"
               />
               <h2 class="projects-list-subtitle">Taxi Service</h2>
-              <p class="projects-list-text text">Marketing</p>
+              <p class="projects-list-text">Marketing</p>
             </a>
           </li>
           <li class="projects-list-item">
@@ -131,7 +131,7 @@
                 alt="Screen Illustrations"
               />
               <h2 class="projects-list-subtitle">Screen Illustrations</h2>
-              <p class="projects-list-text text">Design</p>
+              <p class="projects-list-text">Design</p>
             </a>
           </li>
           <li class="projects-list-item">
@@ -143,7 +143,7 @@
                 alt="Girl holding a phone"
               />
               <h2 class="projects-list-subtitle">Online Courses</h2>
-              <p class="projects-list-text text">Marketing</p>
+              <p class="projects-list-text">Marketing</p>
             </a>
           </li>
           <li class="projects-list-item">
@@ -155,7 +155,7 @@
                 alt="Instagram Stories Concept"
               />
               <h2 class="projects-list-subtitle">Instagram Stories Concept</h2>
-              <p class="projects-list-text text">Design</p>
+              <p class="projects-list-text">Design</p>
             </a>
           </li>
           <li class="projects-list-item">
@@ -167,7 +167,7 @@
                 alt="Organic Food"
               />
               <h2 class="projects-list-subtitle">Organic Food</h2>
-              <p class="projects-catalog-text text">Web Site</p>
+              <p class="projects-catalog-text">Web Site</p>
             </a>
           </li>
           <li class="projects-list-item">
@@ -179,7 +179,7 @@
                 alt="Fresh Coffee"
               />
               <h2 class="projects-list-subtitle">Fresh Coffee</h2>
-              <p class="projects-list-text text">Web Site</p>
+              <p class="projects-list-text">Web Site</p>
             </a>
           </li>
         </ul>
