--- a/portfolio.html
+++ b/portfolio.html
@@ -167,7 +167,7 @@
                 alt="Organic Food"
               />
               <h2 class="projects-list-subtitle">Organic Food</h2>
-              <p class="projects-catalog-text">Web Site</p>
+              <p class="projects-list-text">Web Site</p>
             </a>
           </li>
           <li class="projects-list-item">
